# data2day-RAG-Demo

./: .env_template  README.md  pyproject.toml
src/: app.py  crawl_abstracts.py  utils.py  vectorstore.py
src/.chainlit/: config.toml
src/data/: AI_auf_den_Markt_bringen_–_Fallstricke_&_Pflichten_.md  Bring_your_own_Data_Hands-on_Enterprise_AI_Assistants_in_der_Cloud.md  Chatte_mit_deinen_Daten_Aufbau_eines_Retrieval-Augmented-Generation-(RAG)-Systems.md  Data_Contracts_–_Der_Treiber_für_Automatisierung.md  Data_Mesh_Ein_Reality-Check.md  Datenanalyse_mit_Machine_Learning.md  Datenanalysen_im_Fußball_–_ein_Überblick.md  Datenarchitekturen_in_der_Realität_–_Was_passt_bei_uns.md  Datenkultur_bei_dm.md  Der_Mensch_im_Fokus_nutzerzentriert,_vertrauenswürdige_KI-Technologie_entwickeln.md  Die_Engineering-Perspektive_auf_den_EU_AI_Act.md  Eine_Einführung_in_Large_Language_Models.md  Eine_globale_Daten_&_AI_Platform_in_der_Praxis.md  Elasticsearch_Watcher_Hands-on_Ein_Use_Case_der_anderen_Art.md  Erfahrungen_mit_einer_End-to-End_MLOps-Pipeline_Praktische_Einblicke.md  How_to_build_reliable_data_pipelines_re-using_the_software_development’s_best_practices..md  Integrating_Local_LLMs_and_Knowledge_Graphs_for_Trustworthy_Legal_Chatbots.md  KI_Power-Play_Realistisches_Erwartungsmanagement_für_maximalen_Business_Impact.md  KI_zwischen_fantastischen_Möglichkeiten,_Rechtsunsicherheit_und_Disruption.md  Keynote_Navigating_the_Future_Regulation_and_Its_Impact_on_AI_Practices.md  LLM-MVC_Ein_Entwurfsmuster_zur_Strukturierung_von_LLM-Standardaufgaben_mit_generischen_Prompts.md  (+16 more)
